--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <body>
     <h1>A SPA using the Spotify API</h1>
     <p>What it's exactly going to do, I don't know yet</p>
+    <article class="hidden" data-profile>
+      <h2 data-name></h2>
+      <img data-image src="" alt="" />
+      <p data-country>Country: </p>
+      <p data-followers>Followers: </p>
+      <ul data-externals></ul>
+    </article>
+    <a data-login href="/.netlify/functions/login">Login</a>
     <script src="scripts/main.js" type="module"></script>
   </body>
 </html>
