remove functiosn redirect

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <p data-followers>Followers: </p>
       <ul data-externals></ul>
     </article>
-    <a data-login href="/.netlify/functions/login">Login</a>
+    <button data-login>Login</button>
     <script src="scripts/main.js" type="module"></script>
   </body>
 </html>
