feat: create own component and router system with handlebars

--- a/index.html
+++ b/index.html
@@ -7,16 +7,7 @@
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
-    <h1>A SPA using the Spotify API</h1>
-    <p>What it's exactly going to do, I don't know yet</p>
-    <article class="hidden" data-profile>
-      <h2 data-name></h2>
-      <img data-image src="" alt="" />
-      <p data-country>Country: </p>
-      <p data-followers>Followers: </p>
-      <ul data-externals></ul>
-    </article>
-    <button data-login>Login</button>
+    <div id="app"></div>
     <script src="scripts/main.js" type="module"></script>
   </body>
 </html>
