feat: added a design

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Triptop</title>
   <link rel="stylesheet" href="styles/main.css" />
+  <link rel="stylesheet" href="styles/index.css" />
+  <link rel="stylesheet" href="styles/trip-duration.css" />
+  <link rel="stylesheet" href="styles/list-favourites.css" />
+  <link rel="stylesheet" href="styles/generate.css" />
+  <link rel="stylesheet" href="styles/result.css" />
 </head>
 
 <body>
